--- a/ui.frontend/package.json
+++ b/ui.frontend/package.json
@@ -35,7 +35,6 @@
     "eslint-loader": "^3.0.3",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.4",
-    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "sass": "^1.17.2",
@@ -53,9 +52,11 @@
     "webpack-import-glob-loader": "^1.6.3",
     "webpack-merge": "^4.2.1"
   },
-  "dependencies": {},
   "browserslist": [
     "last 2 version",
     "> 1%"
-  ]
+  ],
+  "dependencies": {
+    "node-sass": "^5.0.0"
+  }
 }
